Ingress-Controller/ingress-efk.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: efk-ingress
  namespace: logging
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: efk.master.com
    http:
      paths:
        - path: /
          backend:
            serviceName: efk-kibana
            servicePort: 443
