Ingress-Controller/ingress-spinnaker.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deck-ingress
  namespace: spinnaker
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: deck.master.com
    http:
      paths:
        - path: /
          backend:
            serviceName: spin-deck
            servicePort: 9000

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gate-ingress
  namespace: spinnaker
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gate.master.com
    http:
      paths:
        - path: /
          backend:
            serviceName: spin-gate
            servicePort: 8043
